--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,17 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <service
-            android:name=".ServiceReceiver"
-            android:exported="false" />
-        <service
-            android:name=".ServerService"
-            android:enabled="true"
-            android:exported="true" />
-        <service
-            android:name=".ServiceSend"
-            android:exported="false"></service>
+        <activity android:name=".FragmentColorWheel"></activity>
     </application>
 
 </manifest>
